# devpi-semantic-ui

./: README.md  pyproject.toml  setup.py
devpi_semantic_ui/: __about__.py  __init__.py
